--- a/index.html
+++ b/index.html
@@ -9,16 +9,25 @@
   </head>
   <body>
     <header>
-      <div class="navbar">
-        <ul>
-          <li>Inicio</li>
-          <li>Panes</li>
-          <li>Panes del mundo</li>
-          <li>Contacto</li>
-        </ul>
+      <div class="header_logo">
+        <img src="./assets/images/pan_logo_header.svg" alt="Imagen de panes" class="header_logo_img">
+        <h2>PANES DEL MUNDO</h2>
       </div>
+      
+        <nav>
+          <a href="" class="nav-link">Inicio</a>
+          <a href="" class="nav-link">El pan</a>
+          <a href="" class="nav-link">Panes del mundo</a>
+          <a href="" class="nav-link">Contacto</a>
+        </nav>
+      
     </header>
-    <main></main>
+    <main>
+      <div class="main_container">
+        <img src="./assets/images/pan-1.jpg" alt="">
+      </div>
+
+    </main>
     <footer></footer>
   </body>
 </html>
