--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       </div>
       
         <nav>
-          <a href="" class="nav-link">Inicio</a>
-          <a href="" class="nav-link">El pan</a>
-          <a href="" class="nav-link">Panes del mundo</a>
-          <a href="" class="nav-link">Contacto</a>
+          <a href="" class="nav-link">INICIO</a>
+          <a href="" class="nav-link">EL PAN</a>
+          <a href="" class="nav-link">PANES DEL MUNDO</a>
+          <a href="" class="nav-link">CONTACTO</a>
         </nav>
       
     </header>
